--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ main {
     align-items: center;
     flex-direction: column;
     height: 100vh;
-    width: max(30vw, 200px);
+    width: max(40vw, 200px);
 }
 
 .logo-container {
@@ -24,7 +24,17 @@ main {
     color: white;
     background-color: rgb(0, 0, 0, .5);
     width: 100%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img.logo-img {
+    height: 10vh;
+}
+
+.form-description {
+    padding-left: 30px;
 }
 
 .form-container {
@@ -32,7 +42,7 @@ main {
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-    padding-left: 30px;
+    background-color: rgb(0, 0, 0, 0.1);
 }
 
 .form-description {
@@ -41,13 +51,22 @@ main {
 }
 
 .background-pop-form {
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    padding: 20px 0 20px 30px;
+    box-shadow: 0 3px rgb(0, 0, 0, 0.3);
+}
+
+.form-title {
+    width: 100%;
+    font-size: 1.5rem;
+    margin: 0;
 }
 
 #create-account-btn {
-    margin-top: 15px;
+    margin: 30px auto;
 }
 
 .each-input {
@@ -56,10 +75,53 @@ main {
     width: 40%;
 }
 
-.form p {
-    font-size: 1.5rem;
+#create-account-btn {
+    color: white;
+    font-weight: bold;
+    margin-left: 30px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 1px solid black;
+    background-color: #596D48;
+    cursor: pointer;
+}
+
+#create-account-btn:hover {
+    box-shadow: 1px 1px #596D48;
+}
+
+#already {
+    padding-left: 30px;
+    font-size: 1.2rem;
+    margin-top: 0;
+}
+
+a {
+    color: #596D48;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+a::after {
+    color: #596D48;
 }
 
 label {
     font-size: 0.7rem;
+}
+
+input {
+    border: 1px solid #E5E7EB;
+    border-radius: 5px;
+}
+
+input:invalid {
+    border-color: red;
+}
+
+input:focus {
+    outline: none;
+    border: 1px solid grey;
+    border-radius: 5px;
+    box-shadow: 2px 2px lightblue;
 }
