Added a responsive font-size for logo and logo-img 1. When sign-up webpage change its layout to mobile format     logo img and logo will have responsive size according to view width

--- a/style.css
+++ b/style.css
@@ -138,5 +138,9 @@ input:focus {
     }
     .logo-container {
         margin: 0;
+        font-size: 7vw;
+    }
+    img.logo-img {
+        height: 14vw;
     }
 }
